cmake_minimum_required (VERSION 2.8)
project(Rocprep Fortran C CXX)

set (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single directory for all executables.")
set (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "Single directory for all libraries and archives.")
mark_as_advanced (LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)

FILE(GLOB perfiles ./*.pm)

#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/ModuleProcessor.pm ${CMAKE_BINARY_DIR}/bin/ModuleProcessor.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Properties.pm ${CMAKE_BINARY_DIR}/bin/Properties.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RocprepProperties.pm ${CMAKE_BINARY_DIR}/bin/RocprepProperties.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RocfaceProcessor.pm ${CMAKE_BINARY_DIR}/bin/RocfaceProcessor.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RocfloProcessor.pm ${CMAKE_BINARY_DIR}/bin/RocfloProcessor.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RocfluProcessor.pm ${CMAKE_BINARY_DIR}/bin/RocfluProcessor.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RocfracProcessor.pm ${CMAKE_BINARY_DIR}/bin/RocfracProcessor.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RocsolidProcessor.pm ${CMAKE_BINARY_DIR}/bin/RocsolidProcessor.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RocstarProcessor.pm ${CMAKE_BINARY_DIR}/bin/RocstarProcessor.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RunLogControl.pm ${CMAKE_BINARY_DIR}/bin/RunLogControl.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Rocprep.pm ${CMAKE_BINARY_DIR}/bin/Rocprep.pm COPYONLY)
#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/rocprep ${CMAKE_BINARY_DIR}/bin/rocprep COPYONLY)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/ModuleProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Properties.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocprepProperties.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocfaceProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocsolidProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocfracProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocfloProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocfracProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocfluProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RocstarProcessor.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/RunLogControl.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Rocprep.pm DESTINATION ${CMAKE_BINARY_DIR}/bin 
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/rocprep DESTINATION ${CMAKE_BINARY_DIR}/bin)

#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/ModuleProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/Properties.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocprepProperties.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocfaceProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocfloProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocsolidProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocfracProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocfracProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocfluProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RocstarProcessor.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/RunLogControl.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/Rocprep.pm DESTINATION ${CMAKE_INSTALL_PREFIX}/bin 
#  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
#  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#file(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/rocprep DESTINATION ${CMAKE_INSTALL_PREFIX}/bin) 

#ADD_CUSTOM_COMMAND(
#TARGET rocprep
#COMMAND copy ${perfiles} ${PROJECT_BINARY_DIR}/bin
#physicsDEPENDS ${perfiles}
#)

#ADD_CUSTOM_TARGET(
#rocprep ln -s ./Rocprep.pm ${PROJECT_BINARY_DIR}/bin/rocprep
#)

INSTALL(FILES ${perfiles} rocprep DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

